// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch> Conditions should not display the \`helper\` if no \`label\` is given 1`] = `
<div
  className="lumx-switch lumx-switch--position-left lumx-switch--theme-light lumx-switch--is-unchecked"
>
  <div
    className="lumx-switch__input-wrapper"
  >
    <input
      aria-checked={false}
      className="lumx-switch__input-native"
      id="switch-uid"
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="lumx-switch__input-placeholder"
    >
      <div
        className="lumx-switch__input-background"
      />
      <div
        className="lumx-switch__input-indicator"
      />
    </div>
  </div>
</div>
`;

exports[`<Switch> Snapshots and structure should render correctly with a \`label\` and a \`helper\` 1`] = `
<div
  className="lumx-switch lumx-switch--position-left lumx-switch--theme-light lumx-switch--is-unchecked"
>
  <div
    className="lumx-switch__input-wrapper"
  >
    <input
      aria-checked={false}
      className="lumx-switch__input-native"
      id="switch-uid"
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="lumx-switch__input-placeholder"
    >
      <div
        className="lumx-switch__input-background"
      />
      <div
        className="lumx-switch__input-indicator"
      />
    </div>
  </div>
  <div
    className="lumx-switch__content"
  >
    <InputLabel
      className="lumx-switch__label"
      htmlFor="switch-uid"
      theme="light"
    >
      Label
    </InputLabel>
    <InputHelper
      className="lumx-switch__helper"
      kind="info"
      theme="light"
    >
      Helper
    </InputHelper>
  </div>
</div>
`;

exports[`<Switch> Snapshots and structure should render correctly with only a \`label\` 1`] = `
<div
  className="lumx-switch lumx-switch--position-left lumx-switch--theme-light lumx-switch--is-unchecked"
>
  <div
    className="lumx-switch__input-wrapper"
  >
    <input
      aria-checked={false}
      className="lumx-switch__input-native"
      id="switch-uid"
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="lumx-switch__input-placeholder"
    >
      <div
        className="lumx-switch__input-background"
      />
      <div
        className="lumx-switch__input-indicator"
      />
    </div>
  </div>
  <div
    className="lumx-switch__content"
  >
    <InputLabel
      className="lumx-switch__label"
      htmlFor="switch-uid"
      theme="light"
    >
      Label
    </InputLabel>
  </div>
</div>
`;

exports[`<Switch> Snapshots and structure should render correctly without any label 1`] = `
<div
  className="lumx-switch lumx-switch--position-left lumx-switch--theme-light lumx-switch--is-unchecked"
>
  <div
    className="lumx-switch__input-wrapper"
  >
    <input
      aria-checked={false}
      className="lumx-switch__input-native"
      id="switch-uid"
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="lumx-switch__input-placeholder"
    >
      <div
        className="lumx-switch__input-background"
      />
      <div
        className="lumx-switch__input-indicator"
      />
    </div>
  </div>
</div>
`;
